# RESEARCH-ai-ml-exploration

./: .gitignore  LICENSE  README.markdown  pyproject.toml  requirements.txt
lab-notebook/: 2020-08-01-KTC-sparsity_estimation_algorithms.ipynb
lab-notebook/2015-06-19-KTC-learning_color_opponent_processing/: ica-analysis.py  notes.txt
lab-notebook/2020-11-29-KTC-ICA_learns_color_opponent_processing/: 2020-11-29-KTC-Using_ICA_to_Learn_Color_Opponent_Processing.html
lib/datasets/: __init__.py  sparse.py
notebooks/: 2020-08-01-KTC-sparsity_estimation_algorithms.html  2020-08-01-KTC-sparsity_estimation_algorithms.py
notebooks/2015-06-19-KTC-learning_gabor_filters/: ica-analysis.py  notes.txt
notebooks/2020-08-01-KTC-sparsity_estimation_algorithms/: 2020-08-01-KTC-sparsity_estimation_algorithms.html  2020-08-01-KTC-sparsity_estimation_algorithms.ipynb  2020-08-01-KTC-sparsity_estimation_algorithms.py
notebooks/2020-11-29-KTC-ICA_learns_color_opponent_processing/: 2020-11-29-KTC-Using_ICA_to_Learn_Color_Opponent_Processing.html  2020-11-29-KTC-Using_ICA_to_Learn_Color_Opponent_Processing.ipynb  2020-11-29-KTC-Using_ICA_to_Learn_Color_Opponent_Processing.py
src/datasets/tests/: test_sparse.py
